fix padding of toc, change some structure, fix ugly picture-links, padding showcontent

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     $("#toc").fadeOut(500);
                     $("#top").fadeOut(500);
                     $("#scroller").css("min-width", "1%");
-                    $("#showContent").css("padding-left", "2%");
+                    $("#showContent").css("margin-left", "1%");
                     $("#showContent").css("width", "98%");
                     $("#tocButton > div").html("&rarr;");
                     $("#tocButton").css("left", "0%");
@@ -451,9 +451,9 @@
                     var leftSpace = "22";
                     $("#toc").fadeIn(500);
                     $("#top").fadeIn(500);
-                    $("#scroller").css("min-width", "14%");
+                    $("#scroller").css("min-width", "22%");
 
-                    $("#showContent").css("padding-left", "23%");
+                    $("#showContent").css("margin-left", "23.5%");
                     $("#showContent").css("width", "auto");
                     $("#tocButton > div").html("&larr;");
 
