--- a/index.html
+++ b/index.html
@@ -196,10 +196,15 @@
                 if (cId !== lastName) {
                     // alert($("#" + cId+"Btn").parent().parent().html());
                     if($("#" + cId+"Btn").parent().parent().hasClass("submenu")){
-                           $("#menucontent > span").addClass('current_page_item').effect("shake");
+                        $("#menucontent > span").addClass('current_page_item').effect("shake");
+                        // $("#menucontent > ul").attr('style', 'display: inline-block !important');
+                        $("#menucontent > ul").removeClass('submenuInvisible');
+                       // alert($(".submenu").css("display"));
                     }
                     else {
                         $("#menucontent > span").removeClass('current_page_item');
+                       // $("#menucontent > ul").attr('style', 'display: none !important');
+                        $("#menucontent > ul").addClass('submenuInvisible');
                     }
                     // alert("#"+cId+"Btn");
                     $("#" + lastName + "Btn").removeClass('current_page_item');
