--- a/index.html
+++ b/index.html
@@ -198,53 +198,24 @@
             }
 
 
-            // $(document).on('mouseover', 'body > article', function (e) {
-            var cId = "index";
-
-            function getCurrentID(el) {
-                cId = el.attr('id');
-                if (cId !== lastName) {
-                    // alert($("#" + cId+"Btn").parent().parent().html());
-
-                }
-            }
 
 
-                $(window).scroll(function () {
-                        updateMenu();
-                    } );
-                    //console.info(getCurrentIDNext(window_top).toString());
-                    /*                 console.info("ind"+indexTop);
-                console.info("try"+tryToxicTop);
-                 console.info("job"+jobManagementTop);
-                 console.info("multi"+multismsTop);
-                 console.info("peta"+petaTop);
-                 console.info("hersche"+herschegithubioTop);
-                 console.info("about"+aboutTop);
-                if (window_top > div_top && cId !== lastName) {
-                    $("#" + lastName + "Btn").removeClass('current_page_item');
-                    $("#" + cId + "Btn").addClass('current_page_item');
-                    document.title = cId + "@hersche.github.io";
+            $(window).resize(function () {
+                //alert("resize");
+                defineTops();
+                updateMenu(lastName, true);
+            });
 
-                    lastName = cId;
-                }
-                */
-               
-
-
-/*            $("#showContent > article").mouseover(function () {
-                // var first = $("body > article:first-of-type").index();
-                // index gibt position aus.
-                getCurrentIDNext(window);
-                //changeMenu(index - first);
-            });*/
-
-            // Functbion changeMenu
-            function changeMenu(index) {
-                var target = $("#header ul li")
-                target.removeClass('current_page_item');
-                target.eq(index).addClass('current_page_item');
-            }
+            $(window).scroll(function () {
+                updateMenu();
+            });
+            /*
+            // This method works basicly perfect, but is filled with nerved conflicts
+            $("#showContent > article").mouseover(function () {
+                var name = $(this).attr("id"); 
+                updateMenu(name);
+            });
+            */
 
 
             $('#news').rssfeed('https://github.com/hersche.atom', {
@@ -265,7 +236,6 @@
             /**
                 Fade in loaded contents withouth jquery-ui
             **/
-
             $("#progress").progressbar("option", "value", 30);
             $("#showContent").show("slide", {
                 direction: "right"
@@ -283,12 +253,12 @@
                     }, 500, function () {
                         hideNews();
                         $("#progress").progressbar("option", "value", 90);
-                        
+
                         setTimeout(function () {
                             $("#progress").progressbar("option", "value", 100);
                             $("#progress").hide("pulsate", {}, 800, function () {});
+                            defineTops();
                             changeContent(lastName, true);
-
                         }, 1000);
 
                         // $( "#progress" ).progressbar("destroy");
@@ -306,11 +276,7 @@
                 });
 
             });
-            $(function () {
-                $(document).tooltip({
-                    track: true
-                });
-            });
+
 
             $(function () {
                 $("#map").tooltip({
