add piwik-tracking, add horain to projects and improve style for project-pics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html manifest="skamstergithubio.appcache">
 
 <head>
+    
+    <!-- Piwik -->
+<script type="text/javascript">
+  var _paq = _paq || [];
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    _paq.push(['setTrackerUrl',  'https://api.ew.sandcats.io:5223']);
+    _paq.push(['setSiteId', 1]);
+    _paq.push(['setApiToken', 'd9rG4B5t-xXYtHkgMHDxpyAjBf7hqV2rSLDzEEnnLkv']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src='https://y3ra38o41qrm147yph1j.ew.sandcats.io:5223/embed.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Piwik Code -->
     <meta charset='utf-8'>
     <script src="js/jquery-2.1.1.js"></script>
     <!-- <script src="js/jquery-migrate-1.2.1.min.js"></script> -->
