also delete old files in git and pass w3c-test

--- a/bootstrap-play/index.html
+++ b/bootstrap-play/index.html
@@ -405,7 +405,7 @@ $(document).ready(function(){
 <div class="modal fade" id="oldProjectsModal" tabindex="-1" role="dialog" aria-labelledby="oldProjectsModalTitle" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-      <div class="modal-header" style="background-color: #212529;">
+      <div class="modal-header" id="oldProjectsModalTitle" style="background-color: #212529;">
           <div>
                   <table class="table table-dark table-hover table-striped">
     <thead>
@@ -507,7 +507,7 @@ $(document).ready(function(){
               <div class="" style="background-color: black; opacity: 0.9; width: 60%; padding: 10px; border-radius: 30px;">
                 <h1>YouPHPTube</h1>
                 <p>This is a very cool project. It's kind of a youtube-clone, but because it's open source, i can help improving it.</p>
-                  <p><ul><li>Various sort-possibilitys</li><li>Category-descriptions</li><li><a href="https://github.com/DanielnetoDotCom/YouPHPTube/tree/master/plugin/Hotkeys" target="_blank">Hotkey-plugin</a> (video-shortcuts)</li><li><a href="https://github.com/DanielnetoDotCom/YouPHPTube/tree/master/plugin/YouPHPFlixHybrid" target="_blank">YouPHPFlixHybrid-Plugin</a> (Combine YouPHPFlix- and Gallery-plugin)</li><li><a href="https://github.com/hersche/YouPHPTube/tree/unstable/plugin/MP4ThumbsAndGifLocal" target="_blank">MP4ThumbsAndGifLocal</a> (Create thumbs and thumb-gifs after upload video)</li><li>Message when database-update is avaible</li></ul></p>
+                  <p><ul><li>Various sort-possibilitys</li><li>Category-descriptions</li><li><a href="https://github.com/DanielnetoDotCom/YouPHPTube/tree/master/plugin/Hotkeys" target="_blank">Hotkey-plugin</a> (video-shortcuts)</li><li><a href="https://github.com/DanielnetoDotCom/YouPHPTube/tree/master/plugin/YouPHPFlixHybrid" target="_blank">YouPHPFlixHybrid-Plugin</a> (Combine YouPHPFlix- and Gallery-plugin)</li><li><a href="https://github.com/hersche/YouPHPTube/tree/unstable/plugin/MP4ThumbsAndGifLocal" target="_blank">MP4ThumbsAndGifLocal</a> (Create thumbs and thumb-gifs after upload video)</li><li>Message when database-update is avaible</li></ul>
 
               </div>
               <div class="carousel-caption text-right">
